# cirrus

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RUNNING.md  docker-compose.yml
.github/workflows/: ci.yml
db/: Dockerfile
db/migrations/: 002_gridded_data.sql  003_opmet_data.sql  004_add_slp.sql  005_sigwx_features.sql  006_opmet_text.sql
db/seed/: load_aerodromes.py
docs/: WAFS-WS-SPEC-2026-001-B_METLAB2_Learnings.docx  WAFS_Evaluation_Compliance_Matrix.md  WAFS_Implementation_Reference_Guide.md  WAFS_Technical_Architecture.md  WAFS_Technical_Specification_Addendum_A.md  WAFS_Workstation_Technical_Specification.docx  validation-guide.md  wafs_workstation_evaluation_summary.md
docs/superpowers/plans/: 2026-03-21-foundation-scaffold.md  2026-03-21-grib2-acquisition-pipeline.md  2026-03-21-wind-barb-visualization.md  2026-03-22-station-observations.md  2026-03-22-temperature-height-contouring.md  2026-03-22-tropopause-maxwind.md
docs/superpowers/specs/: 2026-03-21-foundation-scaffold-design.md  2026-03-21-grib2-acquisition-pipeline-design.md  2026-03-21-wind-barb-visualization-design.md  2026-03-22-icao-areas-legends-design.md  2026-03-22-temperature-height-contouring-design.md  2026-03-22-tropopause-maxwind-design.md  2026-03-23-sigwx-core-design.md  2026-03-23-sigwx-phase2-design.md  2026-03-24-goes-satellite-design.md
services/: .dockerignore  Cargo.toml  Dockerfile.rust
services/acquisition/: Cargo.toml
services/acquisition/src/: config.rs  cycle.rs  db.rs  main.rs  metar.rs  nomads.rs  opmet_text.rs
services/alerting/src/: main.rs
services/backend/: Cargo.toml
services/backend/src/: gridded.rs  main.rs  maxwind.rs  meta.rs  opmet.rs  opmet_text.rs  satellite.rs  sigwx.rs  wind.rs
services/briefing/: Dockerfile  pyproject.toml
services/briefing/src/cirrus/briefing/: main.py
services/decoder/: pyproject.toml
services/decoder/fixtures/: WAFS-Example-2.xml  sigwx_bufr_sample.bufr
services/decoder/src/cirrus/decoder/: db.py  grib_decoder.py  main.py  satellite.py  sigwx_bufr_parser.py  sigwx_db.py  sigwx_load.py  sigwx_parser.py
services/decoder/tests/: test_grib_decoder_maxwind.py  test_sigwx_bufr_parser.py  test_sigwx_parser.py
services/frontend/: Dockerfile  index.html  package-lock.json  package.json
services/frontend/src/: App.css  App.tsx
services/frontend/src-tauri/: Cargo.toml  tauri.conf.json
services/frontend/src/components/: DataPanel.tsx  GoToLocation.tsx  HeaderBar.tsx  IcaoAreaSelector.tsx  LayerPanel.tsx  MapLegend.tsx  OpmetPanel.tsx  StationPopup.tsx  StatusBar.tsx  Toolbar.tsx
services/frontend/src/components/map/: ContourLayer.ts  MapView.tsx  SatelliteLayer.ts  SigwxLayer.ts  StationLayer.ts  WindBarbLayer.ts
services/frontend/src/stores/: appStore.ts
services/frontend/src/utils/: contourComputation.ts  contourWorker.ts  contourWorkerClient.ts  extremaDetection.ts  sigwxSymbols.ts  splineInterpolation.ts  stationModelAtlas.ts  windBarbAtlas.ts  windBarbs.ts
services/monitor/: Cargo.toml
services/monitor/src/: main.rs
services/python/: Dockerfile  pyproject.toml
services/rust/: Cargo.toml  Dockerfile
services/rust/acquisition/src/: main.rs
services/rust/alerting/: Cargo.toml
