[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cirrus-briefing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
]

[project.scripts]
cirrus-briefing = "cirrus.briefing.main:main"

[tool.setuptools.packages.find]
where = ["src"]
